--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,129 @@
 @import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #000;
+}
+
+h1 {
+  font-family: "Merienda", sans-serif;
+  font-size: 80px;
+  font-weight: 700;
+  color: #261624;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 60px;
+  font-weight: 700;
+  color: #000;
+  width: 70%;
+}
+
+p, li, a {
+  font-family: "Roboto", sans-serif;
+  font-size: 40px;
+  font-weight: 400;
+  color: #000;
+}
+
+i {
+  font-size: 55px;
+  color: #66385D;
+}
+
+header {
+  background-color: #F3E9F1;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 140px;
+  z-index: 10;
+}
+header div {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+header i {
+  font-size: 70px;
+}
+header ul {
+  display: none;
+  width: 100%;
+  position: absolute;
+  top: 124px;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  line-height: 150px;
+  box-sizing: border-box;
+  padding: 0;
+  border-top: 5px solid #66385D;
+  box-sizing: border-box;
+  z-index: 9;
+}
+header li {
+  list-style: none;
+  box-sizing: border-box;
+  padding-left: 20px;
+  border-bottom: 5px solid #66385D;
+}
+header li:hover {
+  background-color: #F3E9F1;
+}
+
+main {
+  margin-top: 140px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main > p {
+  width: 70%;
+}
+main .menu_icons {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 10;
+  background-color: #F3E9F1;
+  width: 100%;
+}
+main .menu_icons a {
+  display: block;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  padding-top: 50px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+footer ul {
+  display: none;
+}
+footer .social p {
+  display: none;
+}
 
 /*# sourceMappingURL=style.css.map */
