--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ h2 {
   font-size: 60px;
   font-weight: 700;
   color: #000;
-  width: 70%;
 }
 
 p, li, a {
@@ -32,7 +31,7 @@ p, li, a {
 }
 
 i {
-  font-size: 55px;
+  font-size: 62px;
   color: #66385D;
 }
 
@@ -59,13 +58,13 @@ header i {
   font-size: 70px;
 }
 header ul {
+  background-color: #F3E9F1;
   display: none;
   width: 100%;
   position: absolute;
   top: 124px;
   left: 0;
   width: 100%;
-  background-color: #fff;
   line-height: 150px;
   box-sizing: border-box;
   padding: 0;
@@ -90,8 +89,15 @@ main {
   flex-direction: column;
   align-items: center;
 }
-main > p {
-  width: 70%;
+main .sub_title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+main .sub_title i {
+  margin-right: 20px;
 }
 main .menu_icons {
   position: fixed;
@@ -115,15 +121,80 @@ main .menu_icons a {
 }
 
 footer {
+  width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   align-items: center;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+footer p {
+  display: inline-block;
+  text-align: left;
+}
+footer p, footer section {
+  width: 31%;
 }
 footer ul {
   display: none;
+  list-style: none;
+  position: absolute;
+}
+footer .fa-chevron-down {
+  font-size: 40px;
+  margin-left: 15px;
+}
+footer .social {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 footer .social p {
   display: none;
+}
+
+#a_propos {
+  top: 85px;
+  left: -10px;
+  line-height: 90px;
+}
+
+#orinoco_info {
+  top: 85px;
+  left: 320px;
+  line-height: 90px;
+}
+
+.separation {
+  background-color: #66385D;
+  width: 100%;
+  height: 100px;
+}
+
+button {
+  padding: 40px;
+  font-size: 40px;
+  border-radius: 70px;
+  background-color: #66385D;
+  -webkit-box-shadow: 3px 3px 10px 0px #261624;
+  -moz-box-shadow: 3px 3px 10px 0px #261624;
+  box-shadow: 3px 3px 10px 0px #261624;
+  border: none;
+  color: #fff;
+  margin-top: 30px;
+}
+
+.large_button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 43%;
+}
+.large_button i {
+  color: #fff;
+  font-size: 48px;
 }
 
 /*# sourceMappingURL=style.css.map */
