--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ $dark_purple : #261624;
     font-family: "Roboto", sans-serif;
     font-size: 60px;
     font-weight: 700;
-    color: #000; 
+    color: #000;  
 }
 
 @mixin text {
@@ -28,7 +28,7 @@ $dark_purple : #261624;
 }
 
 @mixin icons {
-    font-size: 55px;
+    font-size: 62px;
     color: $medium_purple;   
 }
 
@@ -46,7 +46,6 @@ h1{
 
 h2{
     @include sub_title();
-    width: 70%;
 }
 
 p, li, a{
@@ -80,13 +79,13 @@ header{
         font-size: 70px;
     }
     ul{
+        background-color: $light_purple;
         display: none;
         width: 100%;
         position: absolute;
         top: 124px;
         left: 0;
         width: 100%;
-        background-color: #fff;
         line-height: 150px;
         box-sizing: border-box;
         padding: 0;
@@ -111,8 +110,15 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    > p{
-        width: 70%;
+    .sub_title{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        i{
+            margin-right: 20px;
+        }
     }
     .menu_icons{
         position: fixed;
@@ -138,15 +144,79 @@ main{
 }
 
 footer{
+    width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     align-items: center;
+    position: relative;
+    background-color: rgba(0,0,0,0.1);
+    p{
+        display: inline-block;
+        text-align: left;
+    }
+    p, section{
+        width: 31%;
+    }
     ul{
         display: none;
+        list-style: none;
+        position: absolute;
+    }
+    .fa-chevron-down{
+        font-size: 40px;
+        margin-left: 15px;
     }
     .social{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
         p{
             display: none;
         }
     }
 }
+
+#a_propos{
+    top: 85px;
+    left: -10px;
+    line-height: 90px;
+}
+
+#orinoco_info{
+    top: 85px;
+    left: 320px;
+    line-height: 90px;
+}
+
+.separation{
+    background-color: $medium_purple;
+    width: 100%;
+    height: 100px;
+}
+
+button{
+    padding: 40px;
+    font-size: 40px;
+    border-radius: 70px;
+    background-color: $medium_purple;
+    -webkit-box-shadow: 3px 3px 10px 0px rgba(38,22,36,1);
+    -moz-box-shadow: 3px 3px 10px 0px rgba(38,22,36,1);
+    box-shadow: 3px 3px 10px 0px rgba(38,22,36,1);
+    border: none;
+    color: #fff;
+    margin-top: 30px;
+}
+
+.large_button{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 43%;
+    i{
+    color: #fff;
+    font-size: 48px;
+    }
+}
+
