--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@ $dark_purple : #261624;
 
 @mixin font_title {
     font-family: "Merienda", sans-serif;
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 700;
     color: $dark_purple;
     text-align: center;
@@ -15,20 +15,20 @@ $dark_purple : #261624;
 
 @mixin sub_title {
     font-family: "Roboto", sans-serif;
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 700;
     color: #000;  
 }
 
 @mixin text {
     font-family: "Roboto", sans-serif;
-    font-size: 40px;
+    font-size: 20px;
     font-weight: 400;
     color: #000;
 }
 
 @mixin icons {
-    font-size: 62px;
+    font-size: 30px;
     color: $medium_purple;   
 }
 
@@ -75,9 +75,6 @@ header{
         align-items: center;
         margin: auto;
     }
-    i{
-        font-size: 70px;
-    }
     ul{
         background-color: $light_purple;
         display: none;
@@ -116,30 +113,6 @@ main{
         justify-content: center;
         align-items: center;
         width: 100%;
-        i{
-            margin-right: 20px;
-        }
-    }
-    .menu_icons{
-        position: fixed;
-        bottom: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        z-index: 10;
-        background-color: $light_purple;
-        width: 100%;
-        a{
-            display: block;
-            width: 30%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            box-sizing: border-box;
-            padding-top: 50px;
-        }
-
     }
 }
 
@@ -151,21 +124,21 @@ footer{
     align-items: center;
     position: relative;
     background-color: rgba(0,0,0,0.1);
+    .footer_infos{
+        display: flex;
+        flex-direction: column;
+    }
     p{
         display: inline-block;
         text-align: left;
-    }
-    p, section{
-        width: 31%;
+        margin: 0;
     }
     ul{
-        display: none;
         list-style: none;
-        position: absolute;
+        margin: 0;
     }
-    .fa-chevron-down{
-        font-size: 40px;
-        margin-left: 15px;
+    section{
+        width: 31%;
     }
     .social{
         display: flex;
@@ -175,18 +148,6 @@ footer{
             display: none;
         }
     }
-}
-
-#a_propos{
-    top: 85px;
-    left: -10px;
-    line-height: 90px;
-}
-
-#orinoco_info{
-    top: 85px;
-    left: 320px;
-    line-height: 90px;
 }
 
 .separation{
@@ -218,5 +179,12 @@ button{
     color: #fff;
     font-size: 48px;
     }
+}
+
+.transparent_button{
+    color: $medium_purple;
+    border: 1px solid $medium_purple;
+    background-color: #fff;
+    
 }
 
