--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ h2 {
   font-family: "Roboto", sans-serif;
   font-size: 40px;
   font-weight: 700;
-  color: #000;
+  color: #261624;
+  text-align: center;
 }
 
 p, li, a {
@@ -28,11 +29,6 @@ p, li, a {
   font-size: 20px;
   font-weight: 400;
   color: #000;
-}
-
-i {
-  font-size: 30px;
-  color: #66385D;
 }
 
 header {
@@ -46,6 +42,9 @@ header {
   height: 140px;
   z-index: 10;
 }
+header img {
+  max-width: 200px;
+}
 header div {
   width: 90%;
   display: flex;
@@ -54,29 +53,35 @@ header div {
   align-items: center;
   margin: auto;
 }
+header nav {
+  width: 60%;
+}
 header ul {
-  background-color: #F3E9F1;
-  display: none;
-  width: 100%;
-  position: absolute;
-  top: 124px;
-  left: 0;
-  width: 100%;
-  line-height: 150px;
-  box-sizing: border-box;
-  padding: 0;
-  border-top: 5px solid #66385D;
-  box-sizing: border-box;
-  z-index: 9;
-}
-header li {
   list-style: none;
-  box-sizing: border-box;
-  padding-left: 20px;
-  border-bottom: 5px solid #66385D;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
 }
-header li:hover {
-  background-color: #F3E9F1;
+header ul li {
+  width: 34%;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 10px 0 10px 0;
+}
+header ul li a {
+  font-size: 15px;
+}
+header ul li:hover {
+  background-color: #66385D;
+  cursor: pointer;
+}
+header ul li:hover > a {
+  color: #fff;
+}
+
+.active_item {
+  border-bottom: 2px solid #261624;
 }
 
 main {
@@ -85,13 +90,44 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
 }
-main .sub_title {
+
+#liste {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+}
+#liste section {
+  width: 90%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  border: 1px solid #66385D;
+  border-radius: 10px;
+  margin-bottom: 40px;
+  padding: 20px;
+  box-shadow: 3px 3px 7px 0px #b0adb0;
+}
+#liste section img {
+  max-width: 200px;
+  border-radius: 5px;
+}
+#liste section div:last-child {
+  width: 75%;
+}
+
+.sub_title {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  width: 100%;
+}
+.sub_title i {
+  color: #261624;
+  font-size: 30px;
+  margin-right: 10px;
 }
 
 footer {
@@ -102,6 +138,8 @@ footer {
   align-items: center;
   position: relative;
   background-color: rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  box-sizing: border-box;
 }
 footer .footer_infos {
   display: flex;
@@ -131,38 +169,34 @@ footer .social p {
 .separation {
   background-color: #66385D;
   width: 100%;
-  height: 100px;
+  height: 50px;
 }
 
 button {
-  padding: 40px;
-  font-size: 40px;
-  border-radius: 70px;
-  background-color: #66385D;
-  -webkit-box-shadow: 3px 3px 10px 0px #261624;
-  -moz-box-shadow: 3px 3px 10px 0px #261624;
-  box-shadow: 3px 3px 10px 0px #261624;
-  border: none;
-  color: #fff;
-  margin-top: 30px;
-}
-
-.large_button {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  width: 43%;
-}
-.large_button i {
+  padding: 10px;
+  font-size: 10px;
+  border-radius: 5px;
+  background-color: #66385D;
+  border: none;
   color: #fff;
-  font-size: 48px;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  margin-top: 30px;
+  border: 1px solid #66385D;
 }
-
-.transparent_button {
+button i {
+  margin-right: 5px;
+  font-size: 15px;
+}
+button:hover {
   color: #66385D;
   border: 1px solid #66385D;
   background-color: #fff;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
