--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,8 @@ $dark_purple : #261624;
     font-family: "Roboto", sans-serif;
     font-size: 40px;
     font-weight: 700;
-    color: #000;  
+    color: $dark_purple; 
+    text-align: center; 
 }
 
 @mixin text {
@@ -52,11 +53,6 @@ p, li, a{
     @include text();
 }
 
-i{
-    @include icons();
-}
-
-
 header{
     background-color: $light_purple;
     width: 100%;
@@ -67,6 +63,9 @@ header{
     align-items: center;
     height: 140px;
     z-index: 10;
+    img{
+        max-width: 200px;
+    }
     div{
         width: 90%;
         display: flex;
@@ -75,31 +74,37 @@ header{
         align-items: center;
         margin: auto;
     }
-    ul{
-        background-color: $light_purple;
-        display: none;
-        width: 100%;
-        position: absolute;
-        top: 124px;
-        left: 0;
-        width: 100%;
-        line-height: 150px;
-        box-sizing: border-box;
-        padding: 0;
-        border-top: 5px solid $medium_purple;
-        box-sizing: border-box;
-        z-index: 9;
+    nav{
+        width: 60%;
     }
-    li{
+    ul{
         list-style: none;
-        box-sizing: border-box;
-        padding-left: 20px;
-        border-bottom: 5px solid $medium_purple;
-        &:hover{
-            background-color: $light_purple;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        li{
+            width: 34%;
+            text-align: center;
+            box-sizing: border-box;
+            padding: 10px 0 10px 0;
+            a{
+                font-size: 15px;
+            }
+            &:hover{
+                background-color: $medium_purple;
+                cursor: pointer;
+            }
+            &:hover > a{
+                color: #fff;
+            }
         }
     }
 } 
+
+.active_item{
+    border-bottom: 2px solid $dark_purple;
+}
 
 main{
     margin-top: 140px;
@@ -107,12 +112,45 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    .sub_title{
+    margin-bottom: 20px;
+}
+
+#liste{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    section{
+        width: 90%;
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
+        justify-content: space-between;
+        border: 1px solid $medium_purple;
+        border-radius: 10px;
+        margin-bottom: 40px;
+        padding: 20px;
+        box-shadow: 3px 3px 7px 0px rgba(176,173,176,1);
+        img{
+            max-width: 200px;
+            border-radius: 5px;
+        }
+        div{
+            &:last-child{
+                width: 75%;
+            }
+        }
+    }
+}
+
+.sub_title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    i{
+        color: $dark_purple;
+        font-size: 30px;
+        margin-right: 10px;
     }
 }
 
@@ -124,6 +162,8 @@ footer{
     align-items: center;
     position: relative;
     background-color: rgba(0,0,0,0.1);
+    padding: 10px;
+    box-sizing: border-box;
     .footer_infos{
         display: flex;
         flex-direction: column;
@@ -138,7 +178,7 @@ footer{
         margin: 0;
     }
     section{
-        width: 31%;
+        width: 31%; 
     }
     .social{
         display: flex;
@@ -153,38 +193,32 @@ footer{
 .separation{
     background-color: $medium_purple;
     width: 100%;
-    height: 100px;
+    height: 50px;
 }
 
 button{
-    padding: 40px;
-    font-size: 40px;
-    border-radius: 70px;
-    background-color: $medium_purple;
-    -webkit-box-shadow: 3px 3px 10px 0px rgba(38,22,36,1);
-    -moz-box-shadow: 3px 3px 10px 0px rgba(38,22,36,1);
-    box-shadow: 3px 3px 10px 0px rgba(38,22,36,1);
-    border: none;
-    color: #fff;
-    margin-top: 30px;
-}
-
-.large_button{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    width: 43%;
-    i{
+    padding: 10px;
+    font-size: 10px;
+    border-radius: 5px;
+    background-color: $medium_purple;
+    border: none;
     color: #fff;
-    font-size: 48px;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 30px;
+    border: 1px solid $medium_purple;
+    i{
+        margin-right: 5px;
+        font-size: 15px;
+    }
+    &:hover{
+        color: $medium_purple;
+        border: 1px solid $medium_purple;
+        background-color: #fff;
+        cursor: pointer;
     }
 }
-
-.transparent_button{
-    color: $medium_purple;
-    border: 1px solid $medium_purple;
-    background-color: #fff;
-    
-}
-
