--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1 {
   font-weight: 700;
   color: #261624;
   text-align: center;
+  margin: 0;
 }
 
 h2 {
@@ -26,7 +27,7 @@ h2 {
 
 p, li, a {
   font-family: "Roboto", sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 400;
   color: #000;
 }
@@ -39,8 +40,9 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 140px;
+  height: 100px;
   z-index: 10;
+  box-shadow: 4px 2px 4px 0px #b0a9b0;
 }
 header img {
   max-width: 200px;
@@ -110,13 +112,31 @@ main {
   margin-bottom: 40px;
   padding: 20px;
   box-shadow: 3px 3px 7px 0px #b0adb0;
+  cursor: pointer;
 }
 #liste section img {
-  max-width: 200px;
+  max-width: 250px;
   border-radius: 5px;
 }
+#liste section div:first-child {
+  width: 30%;
+}
 #liste section div:last-child {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+#liste section h3 {
   width: 75%;
+  margin: 0 0 10px 0;
+}
+#liste section p {
+  margin: 0 0 10px 0;
+}
+#liste section p.product_price {
+  font-weight: 700;
+  margin-bottom: 40px;
 }
 
 .sub_title {
@@ -128,6 +148,39 @@ main {
   color: #261624;
   font-size: 30px;
   margin-right: 10px;
+}
+
+.separation {
+  background-color: #66385D;
+  width: 100%;
+  height: 50px;
+}
+
+button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 10px;
+  font-size: 10px;
+  border-radius: 5px;
+  background-color: #66385D;
+  border: none;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  margin-top: 30px;
+  border: 1px solid #66385D;
+}
+button i {
+  margin-right: 5px;
+  font-size: 15px;
+}
+button:hover {
+  color: #66385D;
+  border: 1px solid #66385D;
+  background-color: #fff;
+  cursor: pointer;
 }
 
 footer {
@@ -164,39 +217,6 @@ footer .social {
 }
 footer .social p {
   display: none;
-}
-
-.separation {
-  background-color: #66385D;
-  width: 100%;
-  height: 50px;
-}
-
-button {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 10px;
-  font-size: 10px;
-  border-radius: 5px;
-  background-color: #66385D;
-  border: none;
-  color: #fff;
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
-  font-weight: 300;
-  margin-top: 30px;
-  border: 1px solid #66385D;
-}
-button i {
-  margin-right: 5px;
-  font-size: 15px;
-}
-button:hover {
-  color: #66385D;
-  border: 1px solid #66385D;
-  background-color: #fff;
-  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
