--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,7 @@ $dark_purple : #261624;
 
 @mixin text {
     font-family: "Roboto", sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 400;
     color: #000;
 }
@@ -43,6 +43,7 @@ body{
 
 h1{
     @include font_title();
+    margin: 0;
 }
 
 h2{
@@ -61,8 +62,9 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 140px;
+    height: 100px;
     z-index: 10;
+    box-shadow: 4px 2px 4px 0px rgba(176,169,176,1);
     img{
         max-width: 200px;
     }
@@ -131,13 +133,33 @@ main{
         margin-bottom: 40px;
         padding: 20px;
         box-shadow: 3px 3px 7px 0px rgba(176,173,176,1);
+        cursor: pointer;
         img{
-            max-width: 200px;
+            max-width: 250px;
             border-radius: 5px;
         }
         div{
+            &:first-child{
+                width: 30%;
+            }
+        }
+        div{
             &:last-child{
-                width: 75%;
+                width: 70%;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+            }
+        }
+        h3{
+            width: 75%;
+            margin: 0 0 10px 0;
+        }
+        p{
+            margin:0 0 10px 0;
+            &.product_price{
+                font-weight: 700;
+                margin-bottom: 40px;
             }
         }
     }
@@ -151,6 +173,39 @@ main{
         color: $dark_purple;
         font-size: 30px;
         margin-right: 10px;
+    }
+}
+
+.separation{
+    background-color: $medium_purple;
+    width: 100%;
+    height: 50px;
+}
+
+button{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    font-size: 10px;
+    border-radius: 5px;
+    background-color: $medium_purple;
+    border: none;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 30px;
+    border: 1px solid $medium_purple;
+    i{
+        margin-right: 5px;
+        font-size: 15px;
+    }
+    &:hover{
+        color: $medium_purple;
+        border: 1px solid $medium_purple;
+        background-color: #fff;
+        cursor: pointer;
     }
 }
 
@@ -187,38 +242,5 @@ footer{
         p{
             display: none;
         }
-    }
-}
-
-.separation{
-    background-color: $medium_purple;
-    width: 100%;
-    height: 50px;
-}
-
-button{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 10px;
-    font-size: 10px;
-    border-radius: 5px;
-    background-color: $medium_purple;
-    border: none;
-    color: #fff;
-    font-family: "Roboto", sans-serif;
-    font-size: 20px;
-    font-weight: 300;
-    margin-top: 30px;
-    border: 1px solid $medium_purple;
-    i{
-        margin-right: 5px;
-        font-size: 15px;
-    }
-    &:hover{
-        color: $medium_purple;
-        border: 1px solid $medium_purple;
-        background-color: #fff;
-        cursor: pointer;
     }
 }
