--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,26 @@ header {
 header img {
   max-width: 200px;
 }
-header div {
+header > div {
   width: 90%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin: auto;
+}
+header section p {
+  display: none;
+}
+header i {
+  font-size: 20px;
+  color: #66385d;
+}
+header .fal {
+  transform: rotate(90deg);
+}
+header .fas:hover {
+  cursor: pointer;
 }
 header nav {
   width: 60%;
@@ -75,7 +88,7 @@ header ul li a {
   font-size: 15px;
 }
 header ul li:hover {
-  background-color: #66385D;
+  background-color: #66385d;
   cursor: pointer;
 }
 header ul li:hover > a {
@@ -107,7 +120,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: 1px solid #66385D;
+  border: 1px solid #66385d;
   border-radius: 10px;
   margin-bottom: 40px;
   padding: 20px;
@@ -151,7 +164,7 @@ main {
 }
 
 .separation {
-  background-color: #66385D;
+  background: linear-gradient(rgba(102, 56, 93, 0.8), #66385d);
   width: 100%;
   height: 50px;
 }
@@ -163,24 +176,105 @@ button {
   padding: 10px;
   font-size: 10px;
   border-radius: 5px;
-  background-color: #66385D;
+  background-color: #66385d;
   border: none;
   color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 20px;
   font-weight: 300;
   margin-top: 30px;
-  border: 1px solid #66385D;
+  border: 1px solid #66385d;
 }
 button i {
   margin-right: 5px;
   font-size: 15px;
 }
 button:hover {
-  color: #66385D;
-  border: 1px solid #66385D;
+  color: #66385d;
+  border: 1px solid #66385d;
   background-color: #fff;
   cursor: pointer;
+}
+
+.formulaire {
+  display: none;
+}
+
+.form_show {
+  display: block;
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(102, 56, 93, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form_show div {
+  box-sizing: border-box;
+  padding: 10px 0 10px 0;
+  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.4);
+  background-color: #fff;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.form_show div i {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+}
+.form_show div i:hover {
+  cursor: pointer;
+}
+.form_show div form {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form_show div form select {
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: #000;
+  width: 100%;
+  margin-bottom: 15px;
+  line-height: 30px;
+  border: 1px solid #66385d;
+  border-radius: 3px;
+}
+.form_show div form input {
+  width: 100%;
+  margin-bottom: 15px;
+  line-height: 30px;
+  border: 1px solid #66385d;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: #000;
+  border-radius: 3px;
+}
+.form_show div form input:focus {
+  box-shadow: inset 0px 0px 2px #66385d;
+}
+.form_show div form input:last-child {
+  background-color: transparent;
+  cursor: pointer;
+}
+.form_show div form input:last-child:hover {
+  border: 1px solid #66385d;
+  background-color: #66385d;
+  color: #fff;
 }
 
 footer {
