--- a/css/style.scss
+++ b/css/style.scss
@@ -2,8 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 $light_purple : #F3E9F1;
-$medium_purple : #66385D;
+$medium_purple : rgb(102, 56, 93);
 $dark_purple : #261624;
+$transparent_purple : rgba(102,56,93,0.2);
 
 @mixin font_title {
     font-family: "Merienda", sans-serif;
@@ -68,13 +69,30 @@ header{
     img{
         max-width: 200px;
     }
-    div{
+    > div{
         width: 90%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         margin: auto;
+    }
+    section{
+        p{
+            display: none;
+        }
+    }
+    i{
+        font-size: 20px;
+        color: $medium_purple;
+    }
+    .fal{
+        transform: rotate(90deg);
+    }
+    .fas{
+        &:hover{
+            cursor: pointer;
+        }
     }
     nav{
         width: 60%;
@@ -177,7 +195,7 @@ main{
 }
 
 .separation{
-    background-color: $medium_purple;
+    background: linear-gradient(rgba(102, 56, 93, 0.8), $medium_purple);
     width: 100%;
     height: 50px;
 }
@@ -209,16 +227,95 @@ button{
     }
 }
 
+.formulaire{
+    display: none;
+}
+
+.form_show{
+    display: block;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: $transparent_purple;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    div{
+        box-sizing: border-box;
+        padding: 10px 0 10px 0;
+        box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.4);
+        background-color: #fff;
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        i{
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 20px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+        form{
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            select{
+                @include text();
+                width: 100%;
+                margin-bottom: 15px;
+                line-height: 30px;
+                border: 1px solid $medium_purple;
+                border-radius: 3px;
+            }
+            input{
+                width: 100%;
+                margin-bottom: 15px;
+                line-height: 30px;
+                border: 1px solid $medium_purple;
+                @include text();
+                border-radius: 3px;
+                &:focus{
+                    box-shadow: inset 0px 0px 2px $medium_purple;
+                }
+                &:last-child{
+                    background-color: transparent;
+                    cursor: pointer;
+                    &:hover{
+                        border: 1px solid $medium_purple;
+                        background-color: $medium_purple;
+                        color: #fff;
+                    }
+                }
+            }
+
+        }
+    }
+    
+}
+
+
+
 footer{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    position: relative;
+    position: relative; 
     background-color: rgba(0,0,0,0.1);
     padding: 10px;
-    box-sizing: border-box;
+    box-sizing: border-box; 
     .footer_infos{
         display: flex;
         flex-direction: column;
