--- a/css/style.scss
+++ b/css/style.scss
@@ -415,11 +415,14 @@ button{
             border-bottom: 1px solid $medium_purple;
             >div{
                 width: 50%;
-                &:last-child{
+                &:nth-child(2){
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                 }
+            }
+            i{
+                cursor: pointer;
             }
             img{
                 max-width: 300px;
